[gd_scene load_steps=2 format=3 uid="uid://bskilltreetree"]

[ext_resource type="Script" path="res://scripts/ui/SkillTreeUI.gd" id="1"]

[node name="SkillTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)
mouse_filter = 2

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skills & Techniques (Press ESC to close)"
horizontal_alignment = 1



[node name="TabContainer" type="TabContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Skills" type="ScrollContainer" parent="MainPanel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="SkillsContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/TabContainer/Skills"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Techniques" type="ScrollContainer" parent="MainPanel/VBoxContainer/TabContainer/Techniques"]
layout_mode = 2

[node name="TechniquesContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/TabContainer/Techniques"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Progress" type="ScrollContainer" parent="MainPanel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/TabContainer/Progress"]
layout_mode = 2
size_flags_horizontal = 3